# sensei

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  my_stack.md
nvim/sensei.nvim/lua/sensei/: chat.lua  commands.lua  health.lua  init.lua  window.lua
nvim/sensei.nvim/plugin/: sensei.lua
src/: ai.rs  config.rs  detect.rs  display.rs  main.rs  tip.rs
tips/: default.json
vscode/: package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts
zed/: Cargo.toml  extension.toml
zed/src/: lib.rs
