[package]
name = "sensei"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sensei"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dirs = "5"
ollama-rs = { version = "0.2", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
rand = "0.8"
shellexpand = "3"
